k8s/local/weather-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-api
  labels:
    app: weather
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather
  template:
    metadata:
      labels:
        app: weather
    spec:
      containers:
        - name: weather-api
          image: variant/weather-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5260
