k8s/local/weather-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-api-service
spec:
  selector:
    app.kubernetes.io/name: weather-api
  ports:
    - protocol: TCP
      port: 443
      targetPort: 5260
