k8s/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weatherapi-ingress
  #annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx-example
  rules:
    - host: weatherapi.com
      http:
        paths:
          - path: "/swagger/index.html"
            pathType: Prefix
            backend:
              service:
                name: weather-api-service
                port:
                  number: 443
